# from_Twitter

./: .gitignore  10 different ways to square a list of numbers in Python.py  Create_map.ipynb  Daily Python Questions.py  Definite_Integration.py  Jupyter Notebook Features.ipynb  Powerful Python Features.ipynb  asyncio_test.py  bubble_sort.py  counter.py  f_strings.ipynb  if_elif_avoid.py  intro.inf  lambda.ipynb  my_list.py  pyproject.toml  python_quiz.ipynb  questions_7.py  remove_bkgrnd.ipynb  swap_numbers.py  test.py  test_.py  turtle_.py
X3/: calendar_twitter.py  from random import randint, choice.py
color/: ccolor.py  color_code.py  color_code_ansi.py  colored.py  colors.py  example_color.py  from_termcolor.py  test_color.py
graphs/: Create_map.ipynb  Create_map.py  rembg_twitter.py  remove_bkgrnd.py  test_PIL.py  test_PIL_blur.py  test_PIL_hello.py  turtle_.py
usefulness/: 4_Mistakes.py  Daily Python Questions.py  atuple.py  calculate.py  float.py  global_debug.py  inf.py  one_liners_22.py
utilites/: bubble_sort.py  speed_test.py
