[tool.poetry]
name = "from-twitter"
version = "0.1.0"
description = ""
authors = ["Kyrylo Chalov <ks7977166@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.1"
folium = "^0.17.0"
ipython = "^8.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
